1.support search actual room id(fix #1) 2.support danmaku record (50%)

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ Thumbs.db
 ehthumbs.db
 Desktop.ini
 
+#Linux
+.directory
 
 ## ------------------------Visual Studio normal settings---------------------------------------
 
